Refactor JDI components. Implement proper REPL